# srg_debug_tool

./: .flake8  .gitignore  Makefile  README.md  RequestServer.py  SRGTester.py  SRGTesterJobs.py  Task.py  TaskSequencer.py  pyproject.toml  requirements.txt  rsync-file-list  testClient.py
jobs/: SRGTesterJobs.py  __init__.py
remote_call/: RequestServer.py  TCPClient.py
tests/: TestTask.py
