[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srg_failure_tester"
version = "0.0.1"
authors = [
  { name="Josh Cohen", email="joshc@slac.stanford.edu" },
]
description = "Spherical Rotor Gauge Tester"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
